WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47074
SVGFEGaussianBlurElement doesn't support dynamic invalidation
https://bugs.webkit.org/show_bug.cgi?id=47074
Summary
SVGFEGaussianBlurElement doesn't support dynamic invalidation
Renata Hodovan
Reported
2010-10-04 02:13:31 PDT
SVGFEGaussianBlurElement doesn't support dynamic invalidation
Attachments
Patch for feGaussianBlur properties
(331.08 KB, patch)
2010-10-04 02:41 PDT
,
Renata Hodovan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Renata Hodovan
Comment 1
2010-10-04 02:41:01 PDT
Created
attachment 69609
[details]
Patch for feGaussianBlur properties
Andreas Kling
Comment 2
2010-10-04 03:11:31 PDT
Comment on
attachment 69609
[details]
Patch for feGaussianBlur properties LGTM
WebKit Commit Bot
Comment 3
2010-10-04 22:32:54 PDT
Comment on
attachment 69609
[details]
Patch for feGaussianBlur properties Clearing flags on attachment: 69609 Committed
r69077
: <
http://trac.webkit.org/changeset/69077
>
WebKit Commit Bot
Comment 4
2010-10-04 22:33:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug