2010-10-04  Renata Hodovan  <reni@inf.u-szeged.hu>

Reviewed by Andreas Kling.

        SVGFEGaussianBlurElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=47074
        Adding layout tests for feGaussianBlur dynamic changes.

        * platform/mac/svg/dynamic-updates/SVGFEGaussianBlurElement-dom-in-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEGaussianBlurElement-dom-in-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEGaussianBlurElement-dom-stdDeviation-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEGaussianBlurElement-dom-stdDeviation-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEGaussianBlurElement-dom-stdDeviation-call-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEGaussianBlurElement-dom-stdDeviation-call-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEGaussianBlurElement-svgdom-in-prop-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEGaussianBlurElement-svgdom-in-prop-expected.png: Added.
        * svg/dynamic-updates/SVGFEGaussianBlurElement-dom-in-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEGaussianBlurElement-dom-in-attr.html: Added.
        * svg/dynamic-updates/SVGFEGaussianBlurElement-dom-stdDeviation-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEGaussianBlurElement-dom-stdDeviation-attr.html: Added.
        * svg/dynamic-updates/SVGFEGaussianBlurElement-dom-stdDeviation-call-expected.txt: Added.
        * svg/dynamic-updates/SVGFEGaussianBlurElement-dom-stdDeviation-call.html: Added.
        * svg/dynamic-updates/SVGFEGaussianBlurElement-svgdom-in-prop-expected.txt: Added.
        * svg/dynamic-updates/SVGFEGaussianBlurElement-svgdom-in-prop.html: Added.
        * svg/dynamic-updates/script-tests/SVGFEGaussianBlurElement-dom-in-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEGaussianBlurElement-dom-stdDeviation-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEGaussianBlurElement-svgdom-in-prop.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEGaussianBlurElement-svgdom-stdDeviation-call.js: Added.
        (executeTest):
2010-10-04  Renata Hodovan  <reni@inf.u-szeged.hu>

        Reviewed by Andreas Kling.

        SVGFEGaussianBlurElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=47074
        The patch also implements the simple setStdDeviation method.

        Tests: svg/dynamic-updates/SVGFEGaussianBlurElement-dom-in-attr.html
               svg/dynamic-updates/SVGFEGaussianBlurElement-dom-stdDeviation-attr.html
               svg/dynamic-updates/SVGFEGaussianBlurElement-dom-stdDeviation-call.html
               svg/dynamic-updates/SVGFEGaussianBlurElement-svgdom-in-prop.html

        * svg/SVGFEGaussianBlurElement.cpp:
        (WebCore::SVGFEGaussianBlurElement::setStdDeviation):
        (WebCore::SVGFEGaussianBlurElement::svgAttributeChanged):
        * svg/SVGFEGaussianBlurElement.h:

Canonical link: https://commits.webkit.org/59684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69077 268f45cc-cd09-0410-ab3c-d52691b4dbfc