WebCore/svg/SVGFEGaussianBlurElement.h
@@ -40,6 +40,7 @@ private:
     SVGFEGaussianBlurElement(const QualifiedName&, Document*);
 
     virtual void parseMappedAttribute(Attribute*);
+    virtual void svgAttributeChanged(const QualifiedName&);
     virtual void synchronizeProperty(const QualifiedName&);
     virtual PassRefPtr<FilterEffect> build(SVGFilterBuilder*);
 
